--- a/App/src/renderer/index.html
+++ b/App/src/renderer/index.html
@@ -6,7 +6,7 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline'"
     />
-    <title>Hello Electron React!</title>
+    <title>Ai Model Maker</title>
   </head>
   <body>
     <div id="root"></div>
